style.css
body {
  background: #e5e5e5;
  overflow-x: hidden;
  font-family: 'Poppins', sans-serif;
}

body,
p,
a,
ul,
li {
  margin: 0;
  padding: 0;
  text-decoration: none;
  font-size: 16px;
}

p,
a,
li {
  color: #344563;
  line-height: 1.4em;
}

/* mobile style */

.grid {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
}

form ul {
  list-style: none;
}

.flex-div ul {
  display: none;
  list-style: none;
}

.flex-div {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 3em;
  box-shadow: 0 0 0.62rem rgba(0, 0, 0, 0.2);
  background: #fff;
  align-items: center;
}

.logo {
  font-size: 1.12em;
  color: #6070ff;
  margin: 0.8em 2em;
  grid-column: 1/5;
  width: 100%;
  animation-duration: 3s;
  animation-name: slidein;
}

@keyframes slidein {
  from {
    margin-left: 100%;
    width: 300%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

.nav-right img {
  grid-column: 6/9;
  margin: 1.1em 2.25em 1.1em 0;
  cursor: pointer;
}

.main-container {
  display: flex;
  background: #fff;
  grid-column: 1/9;
  flex-direction: column;
  width: 100%;
  background-image: url(src/img/header-shapes\ mobile@2x.svg);
  background-repeat: no-repeat;
  background-size: 100%;
  background-position-y: 0.8em;
  border: 1px solid #dfe1e6;
  border-bottom-left-radius: 4em;
}

.greeting-text h1 {
  font-size: 2.5em;
  margin: 3.3em 0.6em 0 1em;
  color: #091e42;
}

.greeting-text p {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 25rem;
  margin: 0.8em 2.5em;
}

.connect p {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0.8em 2.5em;
  color: #7f8cff;
}

.media-icon {
  display: flex;
  justify-content: space-between;
  height: 1.25rem;
  margin: 0.8em 2.5em 6em 2.5em;
  cursor: pointer;
  list-style: none;
  width: 45%;
}

.works-container {
  margin: 5em 2em;
  row-gap: 5em;
  display: flex;
  flex-direction: column;
  grid-column: 2/8;
}

#container-card {
  background: #fff;
  border: 1px solid #dfe1e6;
  border-radius: 4%;
  display: flex;
  flex-direction: column;
  grid-column: 1/9;
}

.thumbnail img {
  width: 92%;
  margin: 0.8em;
}

.card1 h2 {
  margin: 0 0.8em 0 0.4em;
  font-size: 2em;
}

.card2 h2 {
  margin: 0.2em 0.8em 0 0.4em;
  font-size: 2em;
}

.info-card {
  display: flex;
  justify-content: space-between;
  font-size: 0.5em;
  margin: 0 5em 0 1.5em;
  align-items: center;
}

.info-card .canopy {
  list-style: none;
  font-size: 1.5em;
}

.info-card .c-text {
  color: #7a869a;
}

.card-text {
  display: flex;
  justify-content: center;
  margin: auto 1.5em 0 1em;
}

.languages {
  list-style: none;
  display: flex;
  justify-content: space-between;
  margin: 2% 30% 0 5%;
}

.languages a {
  margin: 0 0.5% 0 1%;
}

.languages-menu {
  list-style: none;
}

.btn {
  color: #6070ff;
  font-size: 0.75em;
  border: 1px solid #ebebff;
  background: #ebebff;
  border-radius: 0.5rem;
  padding: 0.2rem 0.8rem;
  text-decoration: none;
}

.project-link {
  font-size: 1.2rem;
  padding: 0.1em;
  margin: 2em 0.6em;
}

.btn2 {
  color: #396df2;
  border: 1px solid #396df2;
  border-radius: 0.5rem;
  text-decoration: none;
  padding: 0.5em;
  background-color: #fff;
  transition: padding 1s, background-color 1s;
}

.btn2:hover {
  padding: 0.7em;
  background-color: #ebebff;
}

.about-section {
  display: flex;
  background: #fff;
  grid-column: 1/9;
  flex-direction: column;
  border: 1px solid #dfe1e6;
  border-top-right-radius: 4em;
  border-bottom: 0;
}

.about-title {
  margin: 2.5em 0.6em 0 0.6em;
  font-size: 2.5em;
  color: #091e42;
}

.about-myself p {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 25rem;
  margin: 0.6em 2.5em 0 1.5em;
}

.connect2 p {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0.8em 1.5em;
  color: #7f8cff;
}

.media-icon2 {
  display: flex;
  justify-content: space-between;
  height: 1.25rem;
  margin: 0.6em 8em 0 1.5em;
  cursor: pointer;
  list-style: none;
  width: 50%;
}

.resume-link {
  font-size: 1.2rem;
  padding: 0.1em;
  margin: 2em 0.6em;
}

.btn3 {
  color: #396df2;
  border: 1px solid #396df2;
  border-radius: 0.5rem;
  text-decoration: none;
  padding: 0.5em;
}

.bottom-menus {
  display: flex;
  grid-column: 1/9;
  flex-direction: column;
}

.languages-des {
  display: flex;
  justify-content: space-between;
  margin: 0.6em 2.5em 0 1.5em;
  align-items: center;
}

.languages-des img {
  height: 5%;
}

.languages-box {
  display: flex;
  grid-column: 1/9;
  flex-direction: column;
}

.languages-box .javascript-box {
  display: flex;
  justify-content: left;
  align-items: center;
  border: 1px solid #f7f7f9;
  border-radius: 0.5rem;
  background: #f7f7f9;
  margin: 0.6em 2.5em 0 1.5em;
  padding: 0.5em;
}

.contact-text p {
  color: #ebebff;
  margin: 0.6em 0.6em 0 0.6em;
  width: 20rem;
  font-size: 1.25rem;
  justify-content: center;
  text-align: center;
  line-height: 1.75rem;
}

.languages-box .javascript-box p {
  font-size: 1em;
  padding-left: 1em;
  color: #253858;
}

.languages-box .html-box {
  display: flex;
  justify-content: left;
  align-items: center;
  border: 1px solid #f7f7f9;
  border-radius: 0.5rem;
  background: #f7f7f9;
  margin: 0.6em 2.5em 0 1.5em;
  padding: 0.5em;
}

.languages-box .html-box p {
  font-size: 1em;
  padding-left: 1em;
  color: #253858;
}

.languages-box .css-box {
  display: flex;
  justify-content: left;
  align-items: center;
  border: 1px solid #f7f7f9;
  border-radius: 0.5rem;
  background: #f7f7f9;
  margin: 0.6em 2.5em 0 1.5em;
  padding: 0.5em;
}

.languages-box .css-box p {
  font-size: 1em;
  padding-left: 1em;
  color: #253858;
}

.frameworks-menu {
  display: flex;
  justify-content: space-between;
  margin: 0.6em 2.5em 0 1.5em;
  align-items: center;
}

.skills-menu {
  display: flex;
  justify-content: space-between;
  margin: 0.6em 2.5em 0 1.5em;
  align-items: center;
}

.background-section {
  background: #fff;
}

.contact-section {
  background: #6070ff;
  background-image: url(src/img/contact\ form\ shapes-mobile@2x.svg);
  background-repeat: no-repeat;
  background-size: 55%;
  background-position-x: right;
  background-position-y: 2.5em;
  border-top-left-radius: 4rem;
}

.contact-text-section {
  display: flex;
  grid-column: 1/9;
  flex-direction: column;
  align-items: center;
}

.contact-title h4 {
  margin: 3em 0.6em 0 0.6em;
  font-size: 2.5em;
  color: #fff;
}

form {
  display: flex;
  grid-column: 1/9;
  flex-direction: column;
  align-items: left;
  margin: 0.6em 3em 0 0.6em;
}

.input-box input {
  width: 100%;
  border: 1px solid #cfd8dc;
  border-radius: 0.5rem;
  margin: 0.6em 1em 0 0.6em;
  text-align: left;
  padding: 3%;
}

.input-box textarea {
  width: 100%;
  border: 1px solid #cfd8dc;
  border-radius: 0.5rem;
  margin: 0.6em 0.6em 0 0.6em;
  text-align: left;
  padding: 3%;
}

button {
  background-color: #fff;
  padding: 3%;
  font-weight: 700;
  font-size: 1.06em;
  color: #6070ff;
  border: 1px solid #cfd8dc;
  border-radius: 0.5rem;
  cursor: pointer;
  margin: 1em 0.6em 2.5em 0.6em;
}

@media (min-width: 768px) {
  body {
    font-size: 20px;
  }

  .logo {
    margin: 0 2% 0 70%;
  }

  .nav-right img {
    display: none;
  }

  .flex-div ul {
    display: flex;
    justify-content: space-between;
    margin: 1em 0 0.8em 60%;
  }

  .flex-div li {
    margin-right: 1em;
    cursor: pointer;
    color: #344563;
    font-weight: 550;
    font-size: 0.7em;
  }

  .main-container {
    background-image: url(src/img/Header\ bg.svg);
    background-repeat: no-repeat;
    background-size: 100%;
    background-position-y: 2em;
  }

  .greeting-text h1 {
    margin: 20% 0.6em 0 15%;
  }

  .greeting-text p {
    margin: 0.8em 20% 0 15%;
  }

  .connect p {
    margin: 0.8em 20% 0 15%;
  }

  .media-icon {
    margin: 0.8em 20% 20% 15%;
    width: 23%;
  }

  #container-card {
    align-content: center;
  }

  .thumbnail .item-1 {
    position: absolute;
    left: 5%;
    width: 42%;
  }

  .card1 {
    width: 50%;
    margin-left: 50%;
  }

  .card1 h2 {
    margin: 10% 0 0 4%;
    font-size: 1.5em;
  }

  .info-card {
    margin: 0 20% 0 5%;
    font-size: 0.5em;
    width: 80%;
  }

  .card1 p {
    font-size: 0.7em;
    margin: 0 10% 0 0;
  }

  .languages {
    margin: 7% 30% 0 5%;
    width: 60%;
  }

  .project-link {
    margin: 7% 0 27% 5%;
    font-size: 0.8em;
  }

  .thumbnail .item-2 {
    position: absolute;
    right: 2em;
    width: 42%;
  }

  .card2 {
    width: 50%;
    margin-right: 50%;
    margin-left: 2%;
  }

  .card2 p {
    font-size: 0.7em;
    margin: 0 10% 0 1%;
  }

  .card2 h2 {
    margin: 10% 0 0 4%;
    font-size: 1.5em;
  }

  .about-section {
    display: flex;
    justify-content: space-between;
    font-size: 2.5em;
  }

  .about-myself {
    margin-right: 50%;
  }

  .about-title {
    margin: 22% 0.6em 0 10%;
    font-size: 0.8em;
  }

  .bottom-menus {
    position: absolute;
    right: 2em;
    width: 50%;
  }

  .about-myself p {
    font-size: 1rem;
    margin: 3% 15% 0 10%;
  }

  .connect2 p {
    font-size: 1rem;
    line-height: 1.5rem;
    margin: 2% 5%;
    color: #7f8cff;
  }

  .media-icon2 {
    margin: 2% 0 0 5%;
    width: 20%;
  }

  .resume-link {
    margin: 5% 5% 15%;
  }

  .languages-des {
    margin: 20% 2.5em 0 1.5em;
    width: 90%;
  }

  .languages-box {
    display: flex;
    flex-direction: row;
    margin: 0 5em 0 0;
  }

  .languages-box .javascript-box {
    display: flex;
    flex-direction: column;
    margin: 1.5em 0.5em;
    padding: 1% 10% 10% 1%;
  }

  .languages-box .javascript-box p {
    font-size: 0.9em;
    padding-left: 0;
    margin-top: 10%;
  }

  .languages-box .html-box {
    display: flex;
    flex-direction: column;
    margin: 1.5em 0.5em;
    padding: 1% 10% 10% 1%;
  }

  .languages-box .html-box p {
    font-size: 0.8em;
    padding-left: 0;
    margin-top: 20%;
  }

  .languages-box .css-box {
    display: flex;
    flex-direction: column;
    margin: 1.5em 0.5em;
    padding: 1% 10% 10% 1%;
  }

  .languages-box .css-box p {
    font-size: 0.8em;
    padding-left: 0;
    margin-top: 20%;
  }

  .frameworks-menu {
    margin: 0.6em 2.5em 0 1.5em;
    width: 90%;
  }

  .skills-menu {
    margin: 0.6em 2.5em 0 1.5em;
    width: 90%;
  }

  .contact-section {
    background-image: url(src/img/contact\ form\ background\ shapes.svg);
    background-repeat: no-repeat;
    background-size: 100%;
    background-position-x: center;
  }

  .contact-title h4 {
    margin: 3em 0.6em 0 0.6em;
    font-size: 1.5em;
    color: #fff;
  }

  form {
    grid-column: 3/7;
  }

  button {
    grid-column: 4/6;
    font-size: 1em;
    margin: 5% 8% 5% 38%;
  }
}

@media (min-width: 992px) {
  .media-icon {
    margin: 0.8em 20% 20% 15%;
    width: 14%;
  }

  .info-card {
    margin: 0 10% 0 5%;
    font-size: 0.5em;
    width: 50%;
  }

  .languages {
    width: 34%;
  }

  .media-icon2 {
    width: 15%;
  }

  .flex-div ul {
    margin-left: 75%;
  }
}

